# del-splat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
asset/: bulba.ply
del-splat-core/: Cargo.toml
del-splat-core/examples/: colmap.rs  cpu_splat_gauss_ply.rs  cpu_splat_sphere_ply.rs  points3d.rs
del-splat-core/src/: colmap.rs  lib.rs  splat_circle.rs  splat_gaussian2.rs  splat_point2.rs  splat_point3.rs  tile_acceleration.rs
del-splat-cpu/: Cargo.toml
del-splat-cpu/examples/: colmap.rs  cpu_splat_gauss_ply.rs  cpu_splat_sphere_ply.rs  points3d.rs
del-splat-cpu/src/: colmap.rs  io_ply.rs  lib.rs  pnt2pixxyndcz.rs  pnt2xyz.rs  splat_circle.rs  splat_gaussian2.rs  splat_point2.rs  splat_point3.rs  splat_sphere.rs  tile_acceleration.rs
del-splat-cuda-kernels/: Cargo.toml
del-splat-cuda-kernels/cuda/: splat_circle.cu  splat_gauss.cu  splat_point.cu  splat_sphere.cu  tile_acceleration.h
del-splat-cudarc/: Cargo.toml
del-splat-cudarc-kernel/: Cargo.toml  build.rs
del-splat-cudarc-kernel/src/: lib.rs  splat_gauss.cu  splat_sphere.cu
del-splat-cudarc/examples/: 02_splat_sphere.rs  03_splat_gauss.rs
del-splat-cudarc/src/: lib.rs  splat_circle.rs  splat_gauss.rs  splat_sphere.rs
del-splat-dlpack/: Cargo.toml  pyproject.toml
del-splat-dlpack/del_splat_dlpack/: __init__.py
del-splat-dlpack/del_splat_dlpack/Points/: __init__.py  torch.py
del-splat-dlpack/del_splat_dlpack/SplatCircle/: __init__.py  torch.py
del-splat-dlpack/del_splat_dlpack/SplatPoint/: __init__.py  torch.py
del-splat-dlpack/src/: lib.rs  points.rs  splat_circle.rs  splat_point.rs  splat_sphere.rs
del-splat-dlpack/tests/: test_splat_sphere.py
del-splat-examples/: Cargo.toml
del-splat-examples/examples/: 02_cudagl_splat_gauss.rs  test_egui.rs
