[workspace]
members = [
    "del-splat-cpu",
    "del-splat-cudarc",
    "del-splat-examples"
]
exclude = [
    "del-splat-cuda-kernel"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
repository = "https://github.com/nobuyuki83/del-splat/"
license = "MIT"

[workspace.dependencies]
num-traits = "0.2.19"
rand = "0.9.0"
anyhow = "1.0.94"
rand_chacha = "0.9.0"
slice-of-array = "0.3.2"
arrayref = "0.3.9"
itertools = "0.14.0"
byteorder = "1.5.0"

# internal
del-splat-cudarc-kernel = {path= "del-splat-cuda-kernel" }
del-splat-cudarc = {path= "del-splat-cudarc" }
del-splat-cpu = {path= "del-splat-cpu" }

# for develop
# del-geo-core = {path = "../del-geo/del-geo-core" }
# del-msh-cpu = { path="../del-msh/del-msh-cpu" }
# del-canvas = { path = "../del-canvas"}

# for push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-cpu = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}

# for deploy
# del-geo-core = "0.1.32"
# del-geo-nalgebra = "0.1.32"


