[package]
name = "del-splat-core"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits.workspace = true
rand.workspace = true
nalgebra.workspace = true
anyhow.workspace = true
rand_chacha.workspace = true
slice-of-array.workspace = true
arrayref.workspace = true
itertools.workspace = true
byteorder.workspace = true
#
del-geo-core.workspace = true
del-geo-nalgebra.workspace = true
del-msh-core.workspace = true
del-canvas-image.workspace = true
del-canvas-cpu.workspace = true
