[package]
name = "del-splat-cudarc"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:cudarc", "dep:del-splat-cudarc-kernel", "dep:del-cudarc"]

[dependencies]
itertools.workspace = true
slice-of-array.workspace = true
anyhow.workspace = true
num-traits.workspace = true
del-msh-core.workspace = true
del-canvas-cpu.workspace = true
del-canvas-image.workspace = true
del-geo-core.workspace = true

cudarc = { workspace = true, optional = true }
del-cudarc = { workspace = true, optional = true }
del-splat-cudarc-kernel = {workspace = true, optional = true }
# kernel-util.workspace = true

# [build-dependencies]
# bindgen_cuda.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true