[package]
name = "del-splat-cudarc"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-splat-cudarc-kernel", "dep:del-cudarc-safe"]

[dependencies]
itertools.workspace = true
slice-of-array.workspace = true
anyhow.workspace = true
num-traits.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-splat-core.workspace = true
del-canvas.workspace = true

# for develop
#del-cudarc = {path="../../del-cudarc", optional = true}
# del-splat-cuda-kernel = {workspace = true, optional = true }

# for GitHub push
del-cudarc-safe = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}
del-splat-cudarc-kernel = {workspace = true, optional = true }

# del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}


[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true