[package]
name = "del-splat-cudarc"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-splat-cuda-kernels", "dep:del-cudarc-sys"]

[dependencies]
arrayref = "0.3.9"
itertools.workspace = true
slice-of-array.workspace = true
anyhow.workspace = true
num-traits.workspace = true
del-msh-cpu.workspace = true
del-geo-core.workspace = true
del-splat-cpu.workspace = true
del-canvas.workspace = true

# for develop
#del-cudarc-sys = {path="../../del-cudarc/del-cudarc-sys", optional = true}
#del-splat-cuda-kernels = {workspace = true, optional = true }

# for GitHub push
del-cudarc-sys = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}
del-splat-cuda-kernels = {workspace = true, optional = true }

# del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}


[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true