[package]
name = "demos-cudarc-gl"
description = "hogehoge"
version.workspace =true
edition.workspace = true
license.workspace = true

[features]
cuda = [
    "del-splat-cudarc/cuda",
]


[dependencies]
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
del-msh-cpu.workspace = true
del-geo-core.workspace = true
#
# depend ony for this crate
glutin = "0.32.2"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
winit = "0.30.9"
image = "0.25.6"
eframe = "0.31.1"
del-canvas = "0.1.7"
del-splat-core = {workspace = true}
arrayref = "0.3.9"

# cuda dependency
# del-msh-cudarc = { workspace = true, optional = true }
del-splat-cudarc = { workspace = true, optional = true }
# del-raycast-cudarc = {workspace = true, optional = true }

[build-dependencies]
gl_generator = "0.14.0"
cfg_aliases = "0.2.1"

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true